# umadb-php

./: .gitattributes  .gitignore  Cargo.toml  INSTALL.md  LICENSE-MIT  Makefile  Makefile.frag  PECL.md  PIE-PACKAGE.md  PIE.md  QUICKSTART.md  README.md  SETUP.md  build.rs  build.sh  composer.json  config.m4  libtool-wrapper.sh  package.xml  phpstan.neon  phpunit.xml  umadb_dummy.c
.github/workflows/: ci.yml  release.yml
examples/: basic.php  consistency.php  query.php
src/: lib.rs
src/php/Exception/: CorruptionException.php  IntegrityException.php  IoException.php  TransportException.php  UmaDBException.php
stubs/: umadb.stub.php
tests/: ClientTest.php
