[package]
name = "umadb"
version = "0.1.5"
edition = "2024"
license = "MIT"
description = "PHP bindings for UmaDB event store"
repository = "https://github.com/bwaidelich/umadb-php"
authors = ["Bastian Waidelich <bastian@waidelich.net>"]

[lib]
name = "umadb"
crate-type = ["cdylib"]

[dependencies]
# UmaDB client and DCB types
umadb-client = { git = "https://github.com/umadb-io/umadb.git", package = "umadb-client", tag = "v0.1.30" }
umadb-dcb = { git = "https://github.com/umadb-io/umadb.git", package = "umadb-dcb", tag = "v0.1.30" }

# PHP bindings framework
ext-php-rs = "0.15.2"

# UUID support
uuid = { version = "1.19", features = ["v4"] }

# Async runtime (used internally by client)
tokio = { version = "1", features = ["rt-multi-thread"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
